--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
     <properties>
         <java.version>11</java.version>
+        <maven.build.timestamp.format>yyyyMMdd-HHmmssSSS</maven.build.timestamp.format>
     </properties>
 
     <dependencies>
@@ -57,6 +58,21 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>1.3.0</version>
+                <configuration>
+                    <to>
+                        <image>registry.hub.docker.com/toddmason/demo64:${maven.build.timestamp}</image>
+
+                        <auth>
+                        <username>toddmason</username>
+                        <password>mustang1964</password>
+                    </auth>
+                    </to>
+                </configuration>
             </plugin>
         </plugins>
     </build>
